--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ erl_crash.dump
 *.ez
 
 # Ignore package tarball (built via "mix hex.build").
-s3x-*.tar
+ps3-*.tar
 
 # Temporary files, for example, from tests.
 /tmp/
